# Contrix

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: node-matrix-ci.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/server/: package.json  tsconfig.json
apps/server/src/: app.ts  index.ts
apps/server/src/config/: cors.ts  silent-mode.ts
apps/server/src/db/: client.ts  migrator.ts  types.ts
apps/server/src/plugins/: database.ts
apps/server/src/routes/: health.ts
apps/server/src/types/: fastify.d.ts  http.ts
apps/web/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  i18n.tsx  main.tsx  redesign.css  styles.css
apps/web/src/config/: providerPresets.ts  server.ts
apps/web/src/locales/: en.ts  zh.ts
apps/web/src/pages/: CallLogsPage.tsx  OverviewPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  ReplayDebuggerPage.tsx  SettingsPage.tsx
apps/web/src/services/: api.ts  endpointSyncEvents.ts
apps/web/src/store/: useEndpointRuntimeStore.ts  useLogsStore.ts  useOverviewStore.ts  (+3 more)
docs/: README.md  contributing.md  export-and-packaging.md  installation.md  logs-replay-metrics.md  product-positioning.md  projects-and-endpoints.md  provider-setup.md  runtime.md  schema-designer.md  spec-and-prompt.md  troubleshooting.md  validation-and-repair.md
scripts/: run-local.mjs
(+97 files in other folders)
